Remove empty directories after managed deletes