@@ -278,19 +278,23 @@ class UpdateTransactionExecutorTest {
 		ClientStorage storage = storage();
 		byte[] bytes = "deactivated-object".getBytes(StandardCharsets.UTF_8);
 		String hash = store(storage, bytes);
-		SelectedModpackTarget target = target("mods/deactivate.jar", "mod", false, hash, bytes.length);
+		String managedPath = "config/empty/deactivate.txt";
+		SelectedModpackTarget target = target(managedPath, "config", false, hash, bytes.length);
 		UpdateTransactionExecutor executor = executor(storage);
 		executor.commit(plan(target, clientConfig(target.manifest().modpackId()),
-				List.of(new Operation(Root.PROJECTION, "mods/deactivate.jar", OperationType.INSTALL_OBJECT, hash, bytes.length, null)),
-				List.of(new ProjectedFile(Root.PROJECTION, "mods/deactivate.jar", true, hash, bytes.length))), target);
-		Path live = Files.write(storage.gameDirectory().resolve("mods/deactivate.jar"), bytes);
+				List.of(new Operation(Root.PROJECTION, managedPath, OperationType.INSTALL_OBJECT, hash, bytes.length, null)),
+				List.of(new ProjectedFile(Root.PROJECTION, managedPath, true, hash, bytes.length))), target);
+		Path live = storage.gameDirectory().resolve(managedPath);
+		Files.createDirectories(live.getParent());
+		Files.write(live, bytes);
+		Path userFile = Files.writeString(storage.gameDirectory().resolve("config/user.txt"), "user-owned", StandardCharsets.UTF_8);
 		Path overlay = storage.overlayFile(target.manifest().modpackId(), "config/options.txt");
 		Files.createDirectories(overlay.getParent());
 		Files.writeString(overlay, "player-edit", StandardCharsets.UTF_8);
 		ClientStorageJsons.ClientBaselineFields baseline = new ClientStorageJsons.ClientBaselineFields();
 		baseline.modpackId = target.manifest().modpackId();
 		ClientStorageJsons.ClientBaselineFields.EntryFields baselineEntry = new ClientStorageJsons.ClientBaselineFields.EntryFields();
-		baselineEntry.logicalPath = "mods/deactivate.jar";
+		baselineEntry.logicalPath = managedPath;
 		baselineEntry.absent = true;
 		baselineEntry.objectHash = "";
 		baselineEntry.size = -1;
@@ -301,8 +305,8 @@ class UpdateTransactionExecutorTest {
 				UpdateTransaction.digest(expected), List.of());
 		generatedCopies.write(storage);
 		Map<UpdatePlan.FileKey, UpdatePlan.FileState> files = Map.of(
-				new UpdatePlan.FileKey(Root.PROJECTION, "mods/deactivate.jar"), new UpdatePlan.FileState(hash, bytes.length, true),
-				new UpdatePlan.FileKey(Root.GAME_DIR, "mods/deactivate.jar"), new UpdatePlan.FileState(hash, bytes.length, true));
+				new UpdatePlan.FileKey(Root.PROJECTION, managedPath), new UpdatePlan.FileState(hash, bytes.length, true),
+				new UpdatePlan.FileKey(Root.GAME_DIR, managedPath), new UpdatePlan.FileState(hash, bytes.length, true));
 		UpdatePlan deactivation = UpdatePlanner.planRemoval(new UpdatePlanner.RemovalInput(target.flatTarget(), baseline, files, Set.of(), generatedCopies,
 				new ClientConfigJsons.ClientConfigFieldsV3()));
 
@@ -310,6 +314,9 @@ class UpdateTransactionExecutorTest {
 				storage.overlayDigest(target.manifest().modpackId()))).success());
 
 		assertFalse(Files.exists(live));
+		assertFalse(Files.exists(live.getParent()));
+		assertTrue(Files.isDirectory(userFile.getParent()));
+		assertEquals("user-owned", Files.readString(userFile, StandardCharsets.UTF_8));
 		assertNull(storage.readActiveState());
 		assertTrue(new ClientGenerationStore(storage).read(target.generationTarget().targetGenerationId()).isPresent());
 		assertEquals(expected, new ClientSelectionStore(storage.selectionFile()).get(target.manifest().modpackId()).orElseThrow());
